--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -42,8 +43,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
   }
 }
